--- a/project1/CMakeLists.txt
+++ b/project1/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 3.19)
 project(project1 LANGUAGES CXX)
 
 find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets)
+find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets Sql)
+
+
 
 qt_standard_project_setup()
 
@@ -13,12 +16,23 @@ qt_add_executable(project1
     widget.ui
     root.cpp
     root.h
+    source/home/home.cpp
+    source/home/home.h
+    source/home/home.ui
+    source/login/login.cpp
+    source/login/login.h
+    source/login/login.ui
+    source/signup/signup.cpp
+    source/signup/signup.h
+    source/signup/signup.ui
+    resource.qrc
 )
 
 target_link_libraries(project1
     PRIVATE
         Qt::Core
         Qt::Widgets
+        Qt::Sql
 )
 
 include(GNUInstallDirs)
